kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guardian-api
  labels:
    team: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guardian-api
  template:
    metadata:
      labels:
        app: guardian-api
    spec:
      containers:
        - image: tarkan0110/guardian-api
          resources:
            requests:
              memory: "500Mi"
              cpu: "1000m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          name: guardian-api
        - image: mysql:8.2.0
          resources:
            requests:
              memory: "500Mi"
              cpu: "1000m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          name: guardian-db
      imagePullSecrets:
        - name: tarkansecret
