kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guardian-api
spec:
  ports:
    - name: web
      port: 80
      targetPort: 8000
  selector:
    app: guardian-api
