kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guardian-api
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: "guardian.tarkancengiz.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guardian-api
                port:
                  name: web
